# tshet-uinh-py

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: build.yml
prepare/: 王三反切音韻地位表.csv
tests/: test_StringLogger.py  test_反切.py  test_壓縮表示.py  test_廣韻.py  test_資料.py  test_音韻地位.py  test_韻鏡.py
tshet_uinh/: StringLogger.py  __init__.py  utils.py  反切.py  壓縮表示.py  常用表達式.py  拓展音韻屬性.py  資料.py  音韻地位.py  音韻屬性常量.py  韻鏡.py
tshet_uinh/data/: __init__.py  廣韻.py  廣韻impl.py
tshet_uinh/data/raw/: __init__.py  廣韻.txt
