[project]
name = "tshet-uinh-py"
version = "0.1.0"
description = "A Python library for the Qieyun phonological system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
license = "MIT"
authors = [{ name = "SkyEye_FAST", email = "skyeyefast@foxmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "ruff>=0.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tshet_uinh"]

[tool.hatch.build.targets.sdist]
include = ["/tshet_uinh", "/README.md", "/LICENSE"]
exclude = ["prepare", "/tests", "**/__pycache__", "**/*.pyc"]
